style.css
/* ... */
.eventDetails .title
{
	font-family: 'Exo 2', sans-serif;
	font-size: 20px;
	line-height: 20px;
	text-align: center;
	border-bottom: 1px solid #fff;
	padding-bottom: 3px;
	margin-bottom: 3px;
}
.eventDetails  .title > .eventTypeInfo
{
	float: right;
	font-size: 14px;
	line-height: 20px;
	margin-left: 5px;
}
.eventDetails  .title > .eventTypeInfo:hover,
.info:hover,
.whiteTextShadow
{ text-shadow: 0px 0px 3px #fff }
.eventDetails .playerCard
{
	margin: 2px 0;
	width: 100%;
}

.eventDetails .cubes { white-space: nowrap }
.eventDetails .diseaseCube
{
	display: inline-block;
	width: 16px;
	height: 16px;
	margin-right: 3px;
	margin-bottom: 3px;
}
.eventDetails .cubes > * { vertical-align: middle }
.eventDetails .locatable:hover { text-decoration: underline }
.eventDetails .infectionCard
{
	font-size: 14px;
	margin-bottom: 8px;
}
.eventDetails .infectionCard .cityName
{
	top: 3px;
	white-space: nowrap;
	margin-left: 18%
}

.eventDetails .column
{
	display: inline-block;
	vertical-align: top;
}
.eventDetails .column:first-of-type p:first-of-type { margin-top: 18px; }
.eventDetails .column:last-of-type { padding-left: 2px }
.eventDetails .column:last-of-type p:first-of-type { border-bottom: 1px solid #fff }
.eventDetails .hand { padding: 5px 0 }
.eventDetails .populationRank
{
	font-size: 22px;
	position: absolute;
}

.indent-1,
.eventTypeTooltip li 
{ margin-left: 12px }
.indent-2 { margin-left: 30px }

#cureMarkerContainer
{
	width: 20.3%;
	left: 29.8%;
	border: none;
}
#cureMarkerContainer .title
{
	font-family: 'Oswald', sans-serif;
	font-size: 20px;
	border-bottom: 1px solid var(--epidemic-green);
}
#cureMarkerContainer .infoContainer
{
	display: block;
	margin-bottom: -3px;
}
#cureMarkerContainer .info
{
	font-size: 14px;
	vertical-align: text-bottom;
}
.cureMarker
{
	position: absolute;
	width: 6%;
	z-index: 2;
}
#cureMarkerY { margin-left: 29.65% }
#cureMarkerR { margin-left: 34.65% }
#cureMarkerU { margin-left: 39.64% }
#cureMarkerB { margin-left: 44.2% }
.bottomPanelDiv
{
	border-top: 1px solid #fff;
	border-left: 1px solid #fff;
	z-index: 2;
}
#researchStationSupplyContainer
{
	width: 16%;
	left: 52%;
}
#researchStationSupplyContainer .title
{
	margin-bottom: 6px;
}
#researchStationSupplyContainer > *:not(.title)
{
	vertical-align: middle;
}
#researchStationSupplyContainer .researchStation
{
	display: inline-block;
	width: 20%;
	margin-left: 5%;
}

.noGlow { transition: filter 0.3s }
.smallGlow,
.mediumGlow,
.bigGlow
{ transition: filter 0.5s }
.noGlow { filter: drop-shadow(0px 0px -1px #fff) }
.smallGlow { filter: drop-shadow(0px 0px 2px #fff) }
.mediumGlow { filter: drop-shadow(0px 0px 6px #fff) }
.bigGlow { filter: drop-shadow(0px 0px 10px #fff) }

.warning-mild-bigGlow { filter: drop-shadow(0px 0px 6px yellow) }
.warning-mild-smallGlow { filter: drop-shadow(0px 0px 2px yellow) }
.warning-mild-bigGlow,
.warning-mild-smallGlow
{ transition: filter 1s }
.warning-moderate-bigGlow { filter: drop-shadow(0px 0px 8px orange) }
.warning-moderate-smallGlow { filter: drop-shadow(0px 0px 3px orange) }
.warning-moderate-bigGlow,
.warning-moderate-smallGlow
{ transition: filter .5s }
.warning-critical-bigGlow { filter: drop-shadow(0px 0px 10px red) }
.warning-critical-smallGlow { filter: drop-shadow(0px 0px 4px red) }
.warning-critical-bigGlow,
.warning-critical-smallGlow
{ transition: filter .25s }

#researchStationSupplyCount
{
	display: inline-block;
	color: #fff;
	margin-left: 31.5%;
}
#playerDeckContainer
{
	width: 14%;
	left: 68%;
	z-index: 8;
}
#playerDeckContainer img
{
	width: 40%;
	margin: 5px 30% 0 30%;
}
#playerDiscardContainer
{
	width: 18%;
	left: 82%;
	z-index: 7;
}
#removedPlayerCards
{
	border-top: 1px solid #fff;
	margin-top: 10px;
}
#topPanel
{
	width: 36%;
	left: 44%;
	overflow-y: hidden;
}
#topPanel > div
{
	padding-bottom: 2px;
	border-bottom: 1px solid #fff;
	border-left: 1px solid #fff;
}
#topPanel .title, #infectionDiscardContainer .title, .bottomPanelDiv .title
{
	font-size: 16px;
	text-align: center;
	padding-top: 3px;
	border-bottom: 1px solid #fff;
}
#cubeSupplies { width: 56% }
#topPanel .info,
.bottomPanelDiv .info
{
	font-size: 12px;
	vertical-align: text-top;
}
.cubeSupply
{
	display: inline-block;
	width: 25%;
}

.cubeSupply p, #researchStationSupplyCount
{
	font-family: 'B612 Mono', monospace;
}
.cubeSupply p
{
	font-size: 18px;
	text-align: center;
	margin-top: -3px;
}
.cubeSupply .diseaseCube
{
	width: 64%;
	margin: 0 18%;
}
#infectionDeckContainer { width: 44% }
#infectionDeckContainer img
{
	position: relative;
	z-index: 4;
	width: 36%;
	border-radius: 100%;
	margin: 1.5% 32% 0.5% 32%;
}
#infectionDiscardContainer
{
	position: absolute;
	left: 80%;
	width: 20%;
	background-color: #252525;
	border-left: 1px solid #fff;
	border-bottom: 1px solid #fff;
	overflow: hidden;
	z-index: 9;
}
#removedInfectionCards
{
	margin-top: 10px;
	border-top: 1px solid #fff;
}

#infDiscardVeil { position: absolute; background-color: #252525; z-index: 10;}
.infDiscardCardback, .forecastCardback
{
	position: absolute;
	width: 10.6%;
	opacity: 0.1;
}
.drawnInfectionCard, .infDiscardCardback, .forecastCardback { pointer-events: none }
.drawnInfectionCard, .drawnPlayerCard { position: absolute }
.drawnPlayerCard { z-index: 2 }
.marker { position: absolute }
.marker > img { width: 100% }
#infectionRateMarker
{
	top: 18.4%;
	left: 63.96%;
	width: 3.15%;
}
.infectionRateHighlight, .outbreaksHighlight
{
	position: absolute;
	background-color: #000;
	z-index: 10;
	opacity: 0.5;
}
.infectionRateHighlight.top
{
	width: 100%;
	height: 17.8%;
}
.infectionRateHighlight.right
{
	top: 17.8%;
	height: 9.6%;
	left: 89.5%;
	width: 10.5%;
}
.infectionRateHighlight.left
{
	top: 17.8%;
	height: 9.6%;
	width: 63.6%;
}
.infectionRateHighlight.bottom
{
	width: 100%;
	top: 27.4%;
	height: 72.6%;
}
#outbreaksMarker
{
	transform: rotate(45deg);
	top: 54.4%;
	left: 2.8%;
	width: 3%;
}
.outbreaksHighlight.top
{
	width: 100%;
	height: 50.4%;
}
/* ... */

